--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,9 +23,10 @@ titles:
   fr-FR   : *FR
   fr-LU   : *FR
   # @end locale config
-show_title: false
+show_title: false 
 articles:
   data_source: paginator.posts
+  type: grid
   article_type: BlogPosting
   show_cover: false
   show_excerpt: true
